--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --color-gray: hsl(0, 0%, 75%);
   --color-grayish-violet: hsl(257, 7%, 63%);
   --color-dark-blue: hsl(255, 11%, 22%);
-  --color-dark-violet: hsl(260, 8%, 14%);
+  --color-darkviolet: hsl(260, 8%, 14%);
 }
 
 body {
